<resources>
    <string name="app_name">Search</string>
    <string name="search_input_hint">Search</string>
    <string name="result_hint">You can search:</string>

    <string name="hint_app">App</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_msn">Msn</string>
    <string name="hint_music">Music</string>
    <string name="hint_schedule">Schedule</string>

    <string name="seeting_google">Google</string>
    <string name="seeting_yooho">Yooho</string>
    <string name="seeting_ask">Ask</string>
    <string name="seeting_aol">Aol</string>

    <string name="result_app">本地应用</string>
    <string name="result_contact">联系人</string>
    <string name="result_msn">短信</string>
    <string name="result_browser">浏览器</string>
    <string name="result_calendar">日程表</string>
    <string name="result_music">音乐</string>
    
    <string name="title_app">App</string>
    <string name="title_contact">Contacts</string>
    <string name="title_msn">Message</string>
    <string name="title_music">Music</string>
    <string name="title_schedule">Schedule</string>

    <string name="search_seeting">搜索设置</string>
    <string name="search_result">搜索结果</string>


</resources>
