<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/hint_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_hint_textview"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_hint"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/search_result_hint_size"
        android:layout_marginTop="81dp"
        />

    <LinearLayout
        android:id="@+id/search_hint_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="27dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/hint_app"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_app"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/hint_text_size"
                android:textColor="@color/search_hint_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/hint_contact"
                android:id="@+id/imageView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_contact"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/hint_text_size"
                android:textColor="@color/search_hint_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/hint_msn"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_msn"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/hint_text_size"
                android:textColor="@color/search_hint_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/hint_music"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_music"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/hint_text_size"
                android:textColor="@color/search_hint_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/hint_schedule"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_schedule"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/hint_text_size"
                android:textColor="@color/search_hint_color"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>